--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -90,6 +90,8 @@ $card-ios-border-radius: 5px;
 $header-height-default: 116px;
 $header-title-margin-top-default: 64px;
 
+$toolbar-background: color($colors, dark);
+
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
