--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,7 +24,6 @@
   ion-navbar {
     min-height: 80px;
     height: inherit;
-    background: color($colors, dark);
 
     ion-title {
       padding: 0;
@@ -38,10 +37,6 @@
         line-height: 41px;
         color: color($colors, light);
       }
-    }
-
-    .toolbar-background-ios {
-      background-color: color($colors, dark);
     }
 
     button {
@@ -63,10 +58,6 @@
   ion-toolbar {
     padding-top: 0;
     min-height: 50px;
-
-    .toolbar-background-ios {
-      background-color: color($colors, dark);
-    }
 
     .searchbar-ios {
       min-height: inherit;
@@ -385,17 +376,23 @@ ion-list.vehicle-list {
   background-color: color($colors, tertiary);
 }
 
-.card-ios{
+.card-ios {
   box-shadow: none;
 }
 
-ion-item-divider.defect-heading{
+ion-item-divider.defect-heading {
   min-height: 60px;
 
-  .label-ios{
+  .label-ios {
     font-size: $font-size-medium-2;
     font-weight: $font-weight-semi-bold;
     color: color($colors, dark);
     padding: 8px 0;
+  }
+}
+
+.gray-toolbar {
+  div.toolbar-background-ios {
+    background: $color-grey-4;
   }
 }
