--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -65,6 +65,7 @@ page-test-create {
 
         [item-end].test-type-status {
           margin: 0;
+          color: $color-grey-1;
         }
 
         [item-end].odometer-reading-status {
