--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
@@ -13,19 +13,12 @@ page-vehicle-history-details {
   ion-content {
     .scroll-content {
       background: $color-grey-3;
+      padding-bottom: 32px;
     }
   }
 
   [text-end] {
     color: $color-grey-1;
-  }
-
-  .defect {
-    color: $color-grey-1;
-  }
-
-  .defect ion-row {
-    margin: 2px 0;
   }
 
   .additional-info span:first-child .forward-slash {
