--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
@@ -1,14 +1,7 @@
 page-test-type-details-input {
+
   .header-ios {
-    height: 100px;
-  }
-
-  ion-navbar.toolbar-ios {
-    padding-top: 24px;
-  }
-
-  ion-title.title-ios {
-    padding-top: 20px;
+    height: $header-height-default;
   }
 
   button.cancel {
