--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
@@ -4,6 +4,7 @@ page-vehicle-history-details {
     .label-ios {
       margin: 11px 8px 7px 0;
       color: $color-grey-1;
+      font-size: $font-size-small;
     }
   }
 
