CVSB-3685 + CVSB-3686 + CVSB-3554 + CVSB-3555

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -413,6 +413,6 @@ ion-item-divider.defect-heading {
 .sign-toast-css {
   .toast-message {
     border-radius: 0.65rem !important;
-    background-color: color($colors, primary);
+    background-color: color($colors, tertiary);
   }
 }
