--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,8 @@ $item-ios-detail-push-color: $color-grey-2;
 $alert-ios-message-text-color: color($colors, dark);
 $alert-ios-sub-title-text-color: color($colors, dark);
 
+$action-sheet-ios-button-text-color: color($colors, primary);
+
 $list-ios-header-color: $color-grey-1;
 $list-ios-header-background-color: $color-grey-3;
 
