--- a/src/pages/testing/test-creation/test-review/test-review.scss
+++ b/src/pages/testing/test-creation/test-review/test-review.scss
@@ -11,6 +11,7 @@ page-test-review {
       .ion-item-title {
         h2 {
           font-size: $font-size-medium;
+          font-weight: $font-weight-semi-bold;
         }
 
         p {
