--- a/src/pages/visit/end-visit-confirm/end-visit-confirm.scss
+++ b/src/pages/visit/end-visit-confirm/end-visit-confirm.scss
@@ -6,7 +6,7 @@ page-end-visit-confirm {
     text-align: center;
 
     h3 {
-      font-size: $font-size-medium;
+      font-size: $font-size-medium-2;
       font-family: $sf-pro-font-family;
       font-weight: $font-weight-semi-bold;
     }
