--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -14,6 +14,7 @@ page-test-create {
       .ion-item-title {
         h2 {
           font-size: $font-size-medium;
+          font-weight: $font-weight-semi-bold;
         }
 
         p {
@@ -37,6 +38,11 @@ page-test-create {
       }
 
       .item-ios {
+        
+        .test-type {
+          font-weight: $font-weight-semi-bold;
+        }
+
         .test-type,
         .odometer-reading {
           margin-top: 2px;
