--- a/src/pages/visit/visit-timeline/visit-timeline.scss
+++ b/src/pages/visit/visit-timeline/visit-timeline.scss
@@ -109,7 +109,7 @@ ion-app.ios page-visit-timeline {
       }
 
       .item-block {
-        &.item-inner {
+        .item-inner {
           border-bottom: none;
         }
 
@@ -133,5 +133,13 @@ ion-app.ios page-visit-timeline {
 
   .divider-color {
     color: $color-grey-1;
+  }
+
+  .test-station-name {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 70%;
   }
 }
