--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -24,6 +24,7 @@ page-test-create {
 
           &.vehicle-vin {
             font-size: $font-size-normal;
+            color: color($colors, dark);
           }
         }
       }
@@ -38,7 +39,7 @@ page-test-create {
       }
 
       .item-ios {
-        
+
         .test-type {
           font-weight: $font-weight-semi-bold;
         }
