--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -456,3 +456,7 @@ ion-item-divider.defect-heading {
     background-color: color($colors, tertiary);
   }
 }
+
+.alert-ios .alert-button {
+  padding: 8px;
+}
