--- a/src/pages/signature-pad/signature-pad.scss
+++ b/src/pages/signature-pad/signature-pad.scss
@@ -28,7 +28,7 @@ page-signature-pad {
 
   button.cancel {
     font-weight: $font-weight-normal;
-    color: color($colors, primary);
+    color: color($colors, light);
   }
 
   .sign-text {
