--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
@@ -6,7 +6,7 @@ page-test-type-details-input {
 
   button.cancel {
     font-weight: $font-weight-normal;
-    color: color($colors, primary);
+    color: color($colors, light);
   }
 
   ion-content p {
