CVSB-2981 Changed checkboxes to ticks on test abandon screen

--- a/src/pages/testing/test-abandonment/reasons-selection/reasons-selection.scss
+++ b/src/pages/testing/test-abandonment/reasons-selection/reasons-selection.scss
@@ -5,4 +5,25 @@ page-reasons-selection {
     text-transform: none;
   }
 
+  .selected {
+    color: color($colors, primary);
+  }
+
+  .checkbox-list {
+    .label-ios {
+      margin: 16px 28px 16px 0;
+    }
+
+    ion-icon[item-end]{
+      display: flex;
+      align-items: center;
+      margin: 0;
+      position: absolute;
+      right: 16px;
+      height: 100%;
+    }
+  }
+
 }
+
+
