--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -74,7 +74,7 @@ page-test-create {
           margin: 0;
           color: $color-grey-1;
 
-          &.text-ios-danger{
+          &.text-ios-danger {
             color: color($colors, danger);
           }
         }
@@ -128,6 +128,14 @@ page-test-create {
           margin-right: 8px;
         }
       }
+    }
+
+    .error-banner {
+      padding: 16px;
+      margin: -16px -16px 24px -16px;
+      font-size: $font-size-medium;
+      color: color($colors, light);
+      background-color: color($colors, danger);
     }
   }
 }
