--- a/src/pages/testing/test-creation/test-create/test-create.scss
+++ b/src/pages/testing/test-creation/test-create/test-create.scss
@@ -51,6 +51,7 @@ page-test-create {
         [item-start].vehicle-type-icon {
           margin: 8px 0 8px 16px;
           background: none;
+          width:65px;
         }
 
         [item-end].vehicle-details {
