--- a/src/pages/testing/test-creation/test-review/test-review.scss
+++ b/src/pages/testing/test-creation/test-review/test-review.scss
@@ -110,6 +110,7 @@ page-test-review {
         [item-start].vehicle-type-icon {
           margin: 8px 0 8px 16px;
           background: none;
+          width:65px;
         }
 
         [item-end].vehicle-details {
