CVSB-6301 Roadworthiness test changes for HGV and TRL

--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -125,6 +125,10 @@ ion-app.ios page-complete-test {
     margin-top: 100px;
   }
 
+  .divider-height-auto {
+    height: auto;
+  }
+
   ion-item-divider {
     height: 40px;
 
