--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -138,5 +138,10 @@ ion-app.ios page-complete-test {
     font-size: $font-size-medium;
   }
 
+  .error-banner {
+    padding: 16px;
+    font-size: $font-size-normal;
+    color: color($colors, light);
+    background-color: color($colors, danger);
+  }
 }
-
