--- a/src/components/signature-popover/signature-popover.html
+++ b/src/components/signature-popover/signature-popover.html
@@ -9,10 +9,10 @@
   </ion-row>
   <ion-row class="row-border">
     <ion-col col-6 text-center class="col-border">
-      <button ion-button clear (click)="closePop()">Cancel</button>
+      <button ion-button full clear (click)="closePop()">Cancel</button>
     </ion-col>
     <ion-col col-6 text-center>
-      <button ion-button clear (click)="confirmPop()">Confirm</button>
+      <button ion-button full clear (click)="confirmPop()" class="bold-action-button">Confirm</button>
     </ion-col>
   </ion-row>
 </ion-grid>
