--- a/src/pages/signature-pad/signature-pad.scss
+++ b/src/pages/signature-pad/signature-pad.scss
@@ -1,4 +1,10 @@
 page-signature-pad {
+  -webkit-text-size-adjust: $disable-accessibility-text-scaling;
+
+  ion-content > div.scroll-content {
+    overflow: hidden;//disable scrolling for the page
+  }
+
   .header-color {
     background-color: color($colors, dark);
 
