--- a/src/pages/testing/test-creation/test-review/test-review.scss
+++ b/src/pages/testing/test-creation/test-review/test-review.scss
@@ -225,7 +225,7 @@ page-test-review {
     padding-right: 32px;
   }
 
-  [item-end][text-nowrap].cor-details {
+  [item-end][text-nowrap] {
     max-width: 110px;
     white-space: nowrap;
     overflow: hidden;
