--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.scss
@@ -44,15 +44,21 @@ page-vehicle-history-details {
     margin: 10px 0 0 0;
 
     ion-list-header {
-      height: 50px;
+      min-height: 50px;
       align-items: flex-end;
     }
   }
 
   .country-of-registration {
-    max-width: 100px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-width: 50%; //accessibility ellipsis limit
+  }
+
+  .staff-id {
+    max-width: 80%; //accessibility ellipsis limit
+  }
+
+  .country-of-registration.accessibility-max-width,
+  .staff-id.accessibility-max-width {
+    text-align: left !important;
   }
 }
