--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,10 @@ $custom-back-button-font-size: 34px;
 
 $list-ios-item-height: 71px;
 
+$loading-ios-max-width: 80%;
+$popover-ios-width: 66%;
+$disable-accessibility-text-scaling: 100% !important;
+$alert-ios-button-group-flex-wrap: wrap-reverse;
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
