--- a/src/components/signature-popover/signature-popover.scss
+++ b/src/components/signature-popover/signature-popover.scss
@@ -1,9 +1,21 @@
 signature-popover {
-  h5 {
+  div p {//scrollable message window
+    max-height: 100px;
+    overflow: scroll;
+    margin: 0;
+  }
+
+  .pop-img {
+    background-color: color($colors, light);
+    height: 100px;
+
+  }
+
+  h5 { //popover title
     margin-bottom: 5px;
   }
 
-  p {
+  p { //popover subtitle
     margin-top: 0;
   }
 
@@ -15,13 +27,21 @@ signature-popover {
     }
 
     .button-ios {
-      height: 29px;
+      height: initial; //revert em scaling height of the button
+      min-height: 29px;
     }
   }
+}
 
-  .pop-img {
-    background-color: white;
-    width: 100%;
-    height: 100px;
-  }
+.popover-ios .popover-content {
+  position:fixed;
+  background-color: $color-grey-3;
+}
+
+ion-backdrop {
+  opacity: 0.4 !important;
+}
+
+.popover-viewport {
+  overflow: hidden;//Fix 1px scrolling introduced by the buttons
 }
