--- a/src/pages/test-station/test-station-home/test-station-home.scss
+++ b/src/pages/test-station/test-station-home/test-station-home.scss
@@ -1,6 +1,7 @@
 page-test-station-home {
 
   .scroll-content{
+    -webkit-text-size-adjust: $disable-accessibility-text-scaling;
     padding: 16px 34px !important;
   }
 
@@ -45,7 +46,7 @@ page-test-station-home {
 
   .start-title {
     margin-top: 15px;
-   
+
     h1 {
       font-size: $font-size-extra-large;
       font-weight: $font-weight-bold;
