--- a/src/pages/testing/vehicle/vehicle-additional/vehicle-additional.scss
+++ b/src/pages/testing/vehicle/vehicle-additional/vehicle-additional.scss
@@ -9,7 +9,7 @@ ion-app.ios page-vehicle-additional {
 
   ion-list.vehicle-list{
     ion-list-header.list-header-double{
-      height: $list-header-height-medium;
+      min-height: $list-header-height-medium;
     }
   }
 }
