--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
@@ -7,7 +7,7 @@ ion-app.ios page-vehicle-brakes {
 
     ion-list.vehicle-list{
       ion-list-header.list-header-double{
-        height: $list-header-height-medium;
+        min-height: $list-header-height-medium;
 
         ion-label{
           margin-top: 20px;
