--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.scss
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.scss
@@ -1,7 +1,7 @@
 ion-app.ios page-vehicle-details {
 
   ion-content {
-    
+
     .scroll-content{
       background: $color-grey-3;
     }
@@ -11,11 +11,18 @@ ion-app.ios page-vehicle-details {
     }
 
     ion-list-header.list-header{
-      height: $list-header-height-medium;
-      
+      min-height: $list-header-height-medium;
+
       ion-label{
         margin-top: 32px;
       }
     }
   }
+
+  ion-list .input-wrapper {
+    p:first-of-type {
+      word-break: break-word;//Break the VIN
+    }
+  }
+
 }
