--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
@@ -21,4 +21,18 @@ page-test-type-details-input {
     }
   }
 
+  .k-limit-custom {
+    background-color: color($colors, light);
+
+    ion-col {
+      padding: 0;
+    }
+
+    ion-col[col-2] {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-left: 1px solid $color-grey-2;
+    }
+  }
 }
