CVSB-731 & CVSB-7936 && CVSB-9724

--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -111,6 +111,7 @@ ion-app.ios page-complete-test {
   }
 
   .certificate-number-guidance {
+    margin-bottom: 0;
     color: $color-grey-1;
   }
 
@@ -166,4 +167,15 @@ ion-app.ios page-complete-test {
   .item-ios.item-block .item-inner {
     border-bottom: none;
   }
+
+  .overflow-hidden {
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.action-sheet-button.action-sheet-button-ios {
+  text-transform: none;
 }
