--- a/src/pages/testing/test-creation/test-review/test-review.scss
+++ b/src/pages/testing/test-creation/test-review/test-review.scss
@@ -59,6 +59,11 @@ page-test-review {
             margin-bottom: 8px;
           }
 
+          .lec-section-title {
+            font-size: $font-size-medium;
+            margin-bottom: 8px;
+          }
+
           .defect-details {
             margin-top: 12px;
             margin-bottom: 12px;
@@ -110,7 +115,7 @@ page-test-review {
         [item-start].vehicle-type-icon {
           margin: 8px 0 8px 16px;
           background: none;
-          width:65px;
+          width: 65px;
         }
 
         [item-end].vehicle-details {
