--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.scss
@@ -13,6 +13,19 @@ ion-app.ios page-vehicle-brakes {
           margin-top: 20px;
         }
       }
+
+      ion-item.flex-direction-column .input-wrapper {
+        flex-direction: column;
+        align-items: start;
+
+        ion-label {
+          margin-bottom: 0;
+        }
+
+        div[item-content] {
+          margin-bottom: 11px;
+        }
+      }
     }
   }
 }
